# website-MIEM

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml
app/: .flake8  .gitignore  Dockerfile  README.md  ci.yml  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
app/core/: admin.py  forms.py  models.py  urls.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_material_file_alter_news_photo_and_more.py  0003_alter_material_file_alter_news_photo_and_more.py  0004_professors_external_link.py  0005_auto_20240420_2046.py  0006_alter_professors_external_link.py  0007_link_alter_professors_full_name.py
app/core/templates/: redirecting_dist_server.html
app/frontend/: README.md  package-lock.json  package.json  tailwind.config.js
app/frontend/public/: index.html
app/frontend/src/: App.js  index.css
app/frontend/src/Components/: AuthContext.jsx  Body.jsx  Box.jsx  Caroussel.jsx  Footer.jsx  Infobox.jsx  Labs.jsx  Layout.jsx  Methodologies.jsx  NavBar.jsx  Professors.jsx  ProtectedRoute.jsx  ResetPassword.jsx  Schedule.jsx  Signin.jsx  Signup.jsx  UseUserStatus.jsx  Useful.jsx  Vacancy.jsx
app/rane/: temp.py
app/remote_lab/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app/website/: settings.py  urls.py
app/website_api/: serializers.py  urls.py  views.py
app/wetty/: apps.py  urls.py  views.py
app/wetty/templates/: redirecting_dist_server.html
docs/infra/: jump-host.md
infra/: main.tf  terraform.tfvars  variables.tf
infra/docker/gitlab-runner/: docker-compose.yml
infra/gitlab-runners/terraform/: 02-network.tf  03-disks.tf  04-instance.tf  05-dns.tf  terraform.tfvars
infra/jump-host/: README.md
infra/jump-host/terraform/: 00-vars.tf  02-network.tf  (+4 more)
infra/test_server/: Dockerfile  README.md  ci.yml  deployment.yaml  main.py  pyproject.toml
nginx/: nginx.conf
wetty/: Dockerfile
(+19 files in other folders)
