[tool.poetry]
name = "rane"
version = "0.0.1"
description = "Django + React web-application for Remote Access to Network Equipment (RANE)"
authors = ["MIEM 1300 <https://cabinet.miem.hse.ru/#/project/1300>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
