[tool.poetry]
name = "test-server"
version = "1.0.0"
description = "Server for testing k8s cluster and seamless deployment"
authors = ["Albert Nazaretyan <https://t.me/aanazaretyan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['WPS305', 'WPS237']
